added stub file

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper":{"^src/(.*)$":"<rootDir>/$1"},
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
